make various performance improvements, and fix issues with thread saftey