@@ -1,38 +1,38 @@
 package nu.borjessons.airhockeyserver.repository;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
 import nu.borjessons.airhockeyserver.model.Username;
 
 public class UserStore {
-  private final Set<Username> users;
+  private final ConcurrentHashMap<Username, Username> users;
 
-  public UserStore(Set<Username> users) {
-    Objects.requireNonNull(users, "users must not be null");
-
-    this.users = users;
+  public UserStore() {
+    this.users = new ConcurrentHashMap<>();
   }
 
   public boolean addUser(Username username) {
     Objects.requireNonNull(username, "username must not be null");
 
-    return users.add(username);
+    return users.putIfAbsent(username, username) == null;
   }
 
   public boolean contains(Username username) {
-    return users.contains(username);
+    return users.containsKey(username);
   }
 
   public Set<Username> getAll() {
-    return Set.copyOf(users);
+    return Collections.unmodifiableSet(users.keySet());
   }
 
   public void heartbeat(Username username) {
-    Optional<Username> optional = users.stream().filter(username::equals).findFirst();
-    optional.ifPresent(user -> user.setInstant(Instant.now()));
+    Username stored = users.get(username);
+    if (stored != null)
+      stored.setInstant(Instant.now());
   }
 
   public void removeUser(Username username) {
